[gd_scene load_steps=24 format=3 uid="uid://dpi3jmc1unbuh"]

[ext_resource type="Texture2D" uid="uid://78kvt8v71osa" path="res://Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Active.png" id="1_4ydae"]
[ext_resource type="Script" path="res://Game/Buildings/gold_mine.gd" id="1_06tq7"]
[ext_resource type="Texture2D" uid="uid://bdr5d0ly30gv8" path="res://Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Destroyed.png" id="2_77lu6"]
[ext_resource type="Texture2D" uid="uid://d2ywyccqibmqn" path="res://Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Inactive.png" id="3_rrr2x"]
[ext_resource type="Texture2D" uid="uid://8o6khnhmnu5t" path="res://Tiny Swords (Update 010)/Resources/Resources/G_Spawn.png" id="5_ggsfy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5i64r"]
atlas = ExtResource("1_4ydae")
region = Rect2(0, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwily"]
atlas = ExtResource("2_77lu6")
region = Rect2(0, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhpwj"]
atlas = ExtResource("3_rrr2x")
region = Rect2(0, 0, 192, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wwatk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i64r")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwily")
}],
"loop": true,
"name": &"destroy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhpwj")
}],
"loop": true,
"name": &"inactive",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3sc25"]
radius = 17.0
height = 134.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bnxh8"]
radius = 76.0066

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1bdl7"]
radius = 11.0
height = 22.0

[sub_resource type="Gradient" id="Gradient_ce671"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_apt7m"]
gradient = SubResource("Gradient_ce671")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nfqah"]
particle_flag_disable_z = true
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 800.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_max = 45.0
scale_min = 2.0
scale_max = 6.0
color = Color(0.611765, 0.611765, 0.611765, 1)
color_initial_ramp = SubResource("GradientTexture1D_apt7m")

[sub_resource type="AtlasTexture" id="AtlasTexture_b4jv0"]
atlas = ExtResource("5_ggsfy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_byuak"]
atlas = ExtResource("5_ggsfy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcff8"]
atlas = ExtResource("5_ggsfy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dpkv"]
atlas = ExtResource("5_ggsfy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv8gb"]
atlas = ExtResource("5_ggsfy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cjhx"]
atlas = ExtResource("5_ggsfy")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmlfy"]
atlas = ExtResource("5_ggsfy")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bc7qf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4jv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byuak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcff8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dpkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv8gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cjhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmlfy")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="GoldMine" type="StaticBody2D"]
y_sort_enabled = true
collision_mask = 0
script = ExtResource("1_06tq7")

[node name="MineSprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 39)
sprite_frames = SubResource("SpriteFrames_wwatk")
animation = &"active"
offset = Vector2(0, -39)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3sc25")

[node name="ActiveArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveArea"]
shape = SubResource("CircleShape2D_bnxh8")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 30)
shape = SubResource("CapsuleShape2D_1bdl7")

[node name="ParticleInterface" type="Node2D" parent="."]

[node name="BloodParticle" type="GPUParticles2D" parent="ParticleInterface"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_nfqah")
lifetime = 0.4
one_shot = true
explosiveness = 0.9
fixed_fps = 7

[node name="GoldSpawn" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Gold" type="AnimatedSprite2D" parent="GoldSpawn"]
position = Vector2(4, 73)
sprite_frames = SubResource("SpriteFrames_bc7qf")
frame = 3
frame_progress = 0.640894
offset = Vector2(-4, -33)

[connection signal="area_entered" from="ActiveArea" to="." method="_on_active_area_area_entered"]
[connection signal="area_exited" from="ActiveArea" to="." method="_on_active_area_area_exited"]
